--- a/HomeTaskFigures/FiguresTests/FiguresTest.csproj
+++ b/HomeTaskFigures/FiguresTests/FiguresTest.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\figures\figures.csproj" />
+    <ProjectReference Include="..\figures\Figures.csproj" />
   </ItemGroup>
 
 </Project>
